update configuration structure, functions

--- a/example/config.json
+++ b/example/config.json
@@ -27,29 +27,11 @@
       "body": {
         "id": "abc123",
         "name": "Milly Yamaguchi"
-      },
-      "expect": {
-        "headers": {
-          "Content-Type": "application/json"
-        },
-        "status": 201,
-        "body": {
-          "ok": true,
-          "resource": {
-            "id": "abc123",
-            "name": "Milly Yamaguchi",
-            "created": "%%ignore%%"
-          }
-        }
       }
     },
     {
       "path": "/api/v1/resource/abc123",
-      "method": "DELETE",
-      "expect": {
-        "status": 204,
-        "body": null
-      }
+      "method": "DELETE"
     }
   ]
 }
