try working around travis building examples

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ go:
   - 1.5
   - 1.6
   - tip
+
+install:
+  - go get github.com/fardog/congruent
+  - go get github.com/fardog/congruent/urljoin
+
+script:
+  - go test ./
+  - go test ./urljoin
